--- a/public/customer_asset/css/style.css
+++ b/public/customer_asset/css/style.css
@@ -26,6 +26,7 @@ body a{
     font-family: 'BreeSerif-Regular';
     src:url(../fonts/BreeSerif-Regular.ttf) format('truetype');
 }
+
 /*--starts-logo--*/
 .logo {
     text-align: center;
@@ -36,7 +37,7 @@ body a{
     font-size: 32px;
     color: #000000;
     margin: 0;
-    font-family: 'Lora-Regular';
+    font-family: 'Times New Roman';
     text-transform: uppercase;
 	display: inline-block;
 }
@@ -410,8 +411,8 @@ span.simpleCart_total {
   list-style: none;
   overflow: hidden;
   width: 100%;
-  padding: 0;
-  margin: 0;
+  /* padding: 0;
+  margin: 0; */
 }
 .rslides li {
   -webkit-backface-visibility: hidden;
